# OpenFace

./: .gitignore  CMakeLists.txt  run.sh  run_after_recompile.sh
cmake/modules/: FindOpenBLAS.cmake
exports/FaceLandmarkForImg/: CMakeLists.txt  FaceLandmarkForImg.cpp
inference/FaceLandmarkImg/: CMakeLists.txt  FaceAnalyzerForImgs.cpp  FaceAnalyzerForImgs.h  FaceAnalyzerForImgsExe.cpp
inference/FaceLandmarkImg/Img/: CMakeLists.txt  FaceAnalyzerForImgsEXE.cpp  FaceAnalyzerImgsEXE.cpp
inference/FaceLandmarkImg/Vid/: CMakeLists.txt  FaceLandmarkVidEXE.cpp
lib/local/Utilities/include/: RecorderCSV.h  RecorderOpenFaceParameters.h
lib/local/Utilities/src/: RecorderCSV.cpp  RecorderOpenFace.cpp  RecorderOpenFaceParameters.cpp
test/: CMakeLists.txt  test.cpp
